kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
  selector:
    app: webapp
