kubernetes/networkpolicy.yml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 20.0.0.0/16
        - podSelector:
            matchLabels:
              app: webapp
      ports:
        - protocol: TCP
          port: 5000
